Fixed delete homes issue